# itunes.py

./: README.md  requires.txt  setup.cfg  setup.py
itunes/: __init__.py  helper.py  playlists.py  process.py  tracks.py  volume.py
tests/: requirements.txt
tests/itunes/examples/: kill.py  next.py  pause.py  pid.py  play.py  playlists.py  prev.py  stop.py  volume.py
tests/itunes/examples/cli/: pause.sh  play.sh
tests/itunes/examples/functions/: kill.py  next.py  pause.py  pid.py  play.py  prev.py  stop.py
tests/itunes/examples/functions/mute, muted, unmute/: mute.py  muted.py  unmute.py
tests/itunes/examples/functions/playlists/: names.py
tests/itunes/examples/functions/volume/: change.py  get.py
tests/itunes/examples/mute, muted, unmute/: mute.py  muted.py  unmute.py
tests/itunes/examples/playlists/: names.py
tests/itunes/examples/volume/: change.py  get.py
