[metadata]
name = itunes
version = 0.0.2
url = https://github.com/looking-for-a-job/itunes.py
classifiers = file: classifiers.txt
description = python + iTunes.app (MacOS)
long_description = file: README.md
long_description_content_type = text/markdown
keywords = itunes

[options]
install_requires = 
	applescript
	public
	setuptools
packages = 
	itunes
