# https://pypi.org/project/setupcfg-generator/
[metadata]
name = itunes
version = 2019.4.13
url = https://github.com/looking-for-a-job/itunes.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = itunes

[options]
install_requires = 
	applescript
	public
	setuptools
packages = 
	itunes
